Tidy of selector

--- a/components/nds-core/scss/typography/_typography-links.scss
+++ b/components/nds-core/scss/typography/_typography-links.scss
@@ -66,9 +66,7 @@
 /// @require {mixin} link-inverse
 /// @since 0.3.1
 @mixin nds-links-inverse {
-  a {
-    @include nds-link-inverse;
-  }
+  a,
   button {
     @include nds-link-inverse;
   }
