--- a/components/nds-hero/scss/hero.scss
+++ b/components/nds-hero/scss/hero.scss
@@ -7,6 +7,7 @@
 /// @since 0.2.0
 .hero {
   @include nds-links-inverse;
+  @include nds-inverse-button-focus;
   background: $nds-colour-hero-background;
   color: $nds-colour-text-inverse;
   left: calc(50%);
