--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -12,7 +12,8 @@
   '~@nice-digital/nds-checkbox/scss/checkbox',
   '~@nice-digital/nds-core/scss/core', '~@nice-digital/nds-filters/scss/filters',
   '~@nice-digital/nds-form-group/scss/form-group',
-  '~@nice-digital/nds-grid/scss/grid', '~@nice-digital/nds-grid/scss/container',
+  '~@nice-digital/nds-grid/scss/grid',
+  '~@nice-digital/nds-container/scss/container',
   '~@nice-digital/nds-hero/scss/hero',
   '~@nice-digital/nds-in-page-nav/scss/in-page-nav',
   '~@nice-digital/nds-input/scss/input',
