--- a/_includes/alpha.html
+++ b/_includes/alpha.html
@@ -1,10 +1,40 @@
 <div class="container">
-	<p class="phase-banner">
-		<span class="phase-banner__tag">
-			<span class="tag tag--impact tag--alpha">Alpha</span>
-		</span>
-		<span class="phase-banner__label">
-			{{ site.product_name }} is in development. This means it is not feature complete and there may be issues. Find any? Please, <a href="{{ site.repository }}/issues" target="_blank" rel="noopener external">let us know</a>!
-		</span>
-	</p>
+  <section class="action-banner">
+    <div class="action-banner__container">
+      <div class="action-banner__inner">
+        <div class="action-banner__text">
+          <h2 class="action-banner__title">
+            This site is no longer maintained
+          </h2>
+          <p class="action-banner__intro">
+            This is the documentation for <b>version 0</b> of the design system
+            and will no longer be updated. Please see the new
+            <a href="https://design-system.nice.org.uk">Design System site</a>
+            on nice.org.uk for the most up-to-date documentation.
+          </p>
+        </div>
+        <div class="action-banner__actions">
+          <a href="https://design-system.nice.org.uk" class="btn btn--inverse">
+            Design System documentation
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <p class="phase-banner">
+    <span class="phase-banner__tag">
+      <span class="tag tag--impact tag--alpha">Alpha</span>
+    </span>
+    <span class="phase-banner__label">
+      {{ site.product_name }} is in development. This means it is not feature
+      complete and there may be issues. Find any? Please,
+      <a
+        href="{{ site.repository }}/issues"
+        target="_blank"
+        rel="noopener external"
+        >let us know</a
+      >!
+    </span>
+  </p>
 </div>
