NDS-169 Card <mark> styling

--- a/components/design-system/scss/typography/_typography-global.scss
+++ b/components/design-system/scss/typography/_typography-global.scss
@@ -93,7 +93,7 @@ code {
 /// Mark
 mark,
 .mark {
-  background-color: #fff999;
+  background-color: $nds-colour-mark;
   padding: em(0 $nds-spacing-x-small);
 }
 
