--- a/components/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/components/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -218,6 +218,10 @@ $nds-colour-success: #3b8458;
 /// @since 0.2.0
 $nds-colour-success-background: #eff7eb;
 
+/// <mark> tag highlighter colour
+/// @since 1.2.4
+$nds-colour-mark: #fff999;
+
 // GUIDANCE TYPES
 
 /// New guidance colour
