--- a/components/nds-maintain-ratio/scss/maintain-ratio.scss
+++ b/components/nds-maintain-ratio/scss/maintain-ratio.scss
@@ -2,6 +2,8 @@
 /// @group components
 ////
 
+@use "sass:math";
+
 @import '~@nice-digital/nds-core/scss/core';
 
 /// Maintains the aspect ratio of an embedded item, useful for responsive embedding, e.g.
@@ -57,17 +59,17 @@
 
   // Modifier class for 21:9 aspect ratio
   &--21-9 {
-    padding-bottom: percentage(9 / 21);
+    padding-bottom: percentage(math.div(9, 21));
   }
 
   // Modifier class for 16:9 aspect ratio
   &--16-9 {
-    padding-bottom: percentage(9 / 16);
+    padding-bottom: percentage(math.div(9, 16));
   }
 
   // Modifier class for 4:3 aspect ratio
   &--4-3 {
-    padding-bottom: percentage(3 / 4);
+    padding-bottom: percentage(3 * 0.25);
   }
 
   // Modifier class for square aspect ratio
