--- a/components/nds-core/scss/helpers/_helpers.scss
+++ b/components/nds-core/scss/helpers/_helpers.scss
@@ -1,2 +1,10 @@
-@import 'helpers-utils', 'helpers-clearfix', 'helpers-focus', 'helpers-glyphs',
-  'helpers-lists', 'helpers-text', 'helpers-visibility', 'helpers-print';
+@use 'helpers-utils';
+@use 'helpers-clearfix';
+@use 'helpers-focus';
+@use 'helpers-glyphs';
+@use 'helpers-lists';
+@use 'helpers-text';
+@use 'helpers-visibility';
+@use 'helpers-print';
+
+@debug 'got here';
