--- a/components/design-system/scss/helpers/_helpers-print.scss
+++ b/components/design-system/scss/helpers/_helpers-print.scss
@@ -1,3 +1,7 @@
+@use '@nice-digital/nds-core/scss/helpers/helpers-print' as *;
+@use '@nice-digital/nds-core/scss/settings/settings-print' as *;
+@use '@nice-digital/nds-core/scss/settings/settings-colours-semantic' as *;
+
 ////
 /// @group helpers
 ////
