--- a/components/design-system/scss/helpers/_helpers-visibility.scss
+++ b/components/design-system/scss/helpers/_helpers-visibility.scss
@@ -1,3 +1,7 @@
+@use '@nice-digital/nds-core/scss/helpers/helpers-visibility' as *;
+@use '@nice-digital/nds-core/scss/settings/settings-mq' as *;
+@use 'sass-mq/mq' as *;
+
 ////
 /// @group helpers
 ////
