--- a/components/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/components/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -2,7 +2,7 @@
 /// @group colors
 ////
 
-@import 'settings-colours-nice';
+@use 'settings-colours-nice' as *;
 
 /// True black, used for print styles
 /// @since 0.2.0
