--- a/components/nds-core/scss/settings/_settings.scss
+++ b/components/nds-core/scss/settings/_settings.scss
@@ -1,4 +1,10 @@
-@import 'settings-colours-nice', 'settings-colours-semantic',
-  'settings-modular-scale', 'settings-spacing', 'settings-breakpoints',
-  'settings-glyphs', 'settings-layout', 'settings-print', 'settings-typography',
-  'settings-mq';
+@forward 'settings-colours-nice';
+@forward 'settings-colours-semantic';
+@forward 'settings-modular-scale';
+@forward 'settings-spacing';
+@forward 'settings-breakpoints';
+@forward 'settings-glyphs';
+@forward 'settings-layout';
+@forward 'settings-print';
+@forward 'settings-typography';
+@forward 'settings-mq';
