--- a/components/nds-core/scss/core.scss
+++ b/components/nds-core/scss/core.scss
@@ -3,4 +3,4 @@
 @forward 'helpers/helpers';
 @forward 'layout/layout';
 @forward 'typography/typography';
-@import 'sass-mq/mq';
+@forward 'sass-mq/mq';
