Filter input component

--- a/components/nds-filters/scss/filters.scss
+++ b/components/nds-filters/scss/filters.scss
@@ -1,1 +1,2 @@
-@import 'filter-panel', 'filter-group', 'filter-option', 'filter-summary';
+@import 'filter-panel', 'filter-group', 'filter-option', 'filter-summary',
+  'filter-input';
