--- a/components/nds-filters/scss/filter-summary.scss
+++ b/components/nds-filters/scss/filter-summary.scss
@@ -20,6 +20,15 @@
     margin: 0;
   }
 
+  &__sort-control {
+    @include nds-link-default;
+    appearance: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+  }
+
   &__filters {
     clear: both;
     list-style: none;
