--- a/components/nds-enhanced-pagination/scss/enhanced-pagination.scss
+++ b/components/nds-enhanced-pagination/scss/enhanced-pagination.scss
@@ -14,6 +14,7 @@
     border: 1px solid red;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: left;
     list-style: none;
     margin: 0;
