NDS-178 change id selector to class for 'page-object-missing' scss

--- a/components/nds-enhanced-pagination/scss/enhanced-pagination.scss
+++ b/components/nds-enhanced-pagination/scss/enhanced-pagination.scss
@@ -72,6 +72,6 @@
 }
 
 // Your pagesActions array is missing an object for a page number that is expected to render
-#page-object-missing {
+.page-object-missing {
   border: 2px solid red;
 }
