--- a/components/nds-enhanced-pagination/scss/enhanced-pagination.scss
+++ b/components/nds-enhanced-pagination/scss/enhanced-pagination.scss
@@ -21,12 +21,34 @@
     position: relative;
   }
 
+  // &__desktop {
+  //   @include mq($from: $nds-breakpoint-sm) {
+  //     border: 10px solid yellow;
+  //   }
+  // }
+
+  // &__mobile {
+  //   border: 10px solid red;
+  // }
+
   // Individual page
   &__item {
     flex-grow: 1;
     margin: 0;
     padding: 0;
     text-align: center;
+    &--desktop {
+      display: none;
+      @include mq($from: $nds-breakpoint-md) {
+        display: block;
+      }
+    }
+    &--mobile {
+      display: block;
+      @include mq($from: $nds-breakpoint-md) {
+        display: none;
+      }
+    }
     &--current {
       background: $nds-colour-nice-grey-2;
       font-weight: bold;
