--- a/components/nds-filters/scss/filter-summary.scss
+++ b/components/nds-filters/scss/filter-summary.scss
@@ -1,7 +1,7 @@
 ////
 /// @group components
 ////
-
+@import '~@nice-digital/nds-core/scss/core';
 /// Filter summary info shows at the top of a list of results and
 /// contains the count and sort options.
 /// .results-info deprecated in 1.0.0, use .filter-summary
@@ -18,6 +18,15 @@
 
   &__sort {
     margin: 0;
+  }
+
+  &__sort-control {
+    @include nds-link-default;
+    appearance: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
   }
 
   &__filters {
