NDS-181 Add enhanced pagination to design system.

--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -10,7 +10,8 @@
   '~@nice-digital/nds-breadcrumbs/scss/breadcrumbs',
   '~@nice-digital/nds-button/scss/button', '~@nice-digital/nds-card/scss/card',
   '~@nice-digital/nds-checkbox/scss/checkbox',
-  '~@nice-digital/nds-core/scss/core', '~@nice-digital/nds-filters/scss/filters',
+  '~@nice-digital/nds-core/scss/core', '~@nice-digital/nds-enhanced-pagination',
+  '~@nice-digital/nds-filters/scss/filters',
   '~@nice-digital/nds-form-group/scss/form-group',
   '~@nice-digital/nds-grid/scss/grid',
   '~@nice-digital/nds-container/scss/container',
