--- a/components/nds-column-list/scss/column-list.scss
+++ b/components/nds-column-list/scss/column-list.scss
@@ -2,22 +2,27 @@
 
 .column-list {
   list-style: none;
-  margin: 0;
+  margin: 0 0 rem($nds-spacing-large);
   max-width: 100%;
 
   &--boxed {
     background: $nds-colour-true-white;
     border: 1px solid $nds-colour-border;
 
+    li {
+      padding: rem(
+        $nds-spacing-small
+      ); // Make room for the anchor focus outline
+    }
+
     a {
-      padding: rem($nds-spacing-x-small $nds-spacing-medium);
+      padding: rem($nds-spacing-x-small 0);
     }
   }
 
   li {
     break-inside: avoid;
     display: block;
-    padding: rem($nds-spacing-small) 0; // Make room for the anchor focus outline
   }
 
   @include mq($from: md) {
@@ -25,8 +30,10 @@
   }
 
   @include mq($from: lg) {
-    &--three-cols {
-      column-count: 3;
+    column-count: 3;
+
+    &--two-columns {
+      column-count: 2;
     }
   }
 }
