NDS-215 Fix issues with A-Z typedef; update Alphabet component with custom class

--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -7,6 +7,7 @@
 
 @import '~@nice-digital/nds-action-banner/scss/action-banner',
   '~@nice-digital/nds-alert/scss/alert',
+  '~@nice-digital/nds-a-z-list/scss/a-z-list',
   '~@nice-digital/nds-alphabet/scss/alphabet',
   '~@nice-digital/nds-breadcrumbs/scss/breadcrumbs',
   '~@nice-digital/nds-button/scss/button', '~@nice-digital/nds-card/scss/card',
