--- a/components/design-system/scss/nice-design-system.scss
+++ b/components/design-system/scss/nice-design-system.scss
@@ -7,9 +7,12 @@
 
 @import '~@nice-digital/nds-action-banner/scss/action-banner',
   '~@nice-digital/nds-alert/scss/alert',
+  '~@nice-digital/nds-a-z-list/scss/a-z-list',
+  '~@nice-digital/nds-alphabet/scss/alphabet',
   '~@nice-digital/nds-breadcrumbs/scss/breadcrumbs',
   '~@nice-digital/nds-button/scss/button', '~@nice-digital/nds-card/scss/card',
   '~@nice-digital/nds-checkbox/scss/checkbox',
+  '~@nice-digital/nds-column-list/scss/column-list',
   '~@nice-digital/nds-core/scss/core', '~@nice-digital/nds-enhanced-pagination',
   '~@nice-digital/nds-filters/scss/filters',
   '~@nice-digital/nds-form-group/scss/form-group',
